--- a/catalogo_muebles/mueblesemae/templates/categoria_confort.html
+++ b/catalogo_muebles/mueblesemae/templates/categoria_confort.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}MUEBLESEMAE{% endblock title %}
+{% block title %}Confort{% endblock title %}
 
 {% block content %}
     <h1>CONFORT</h1>
@@ -33,8 +33,5 @@
             {% endif %}      
         {% endfor %}
     </div>
-
-    <!--cliente-->
     <br>
-    
 {% endblock content %}
