--- a/catalogo_muebles/mueblesemae/templates/categoria_hool.html
+++ b/catalogo_muebles/mueblesemae/templates/categoria_hool.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
-{% block title %}MUEBLESEMAE{% endblock title %}
-
+{% block title %}Hool{% endblock title %}
 {% block content %}
     <h1>HOOL</h1>
     <div class="row justify-content-center">
@@ -34,8 +33,5 @@
             {% endif %}      
         {% endfor %}
     </div>
-
-    <!--cliente-->
-    <br>
-    
+    <br> 
 {% endblock content %}
