--- a/catalogo_muebles/mueblesemae/templates/detalle_compra.html
+++ b/catalogo_muebles/mueblesemae/templates/detalle_compra.html
@@ -1,21 +1,17 @@
 {% extends "base.html" %}
-{% block title %}{{cliente | capfirst}}{% endblock title %}
+{% block title %}Detalle compra {{cliente | capfirst}}{% endblock title %}
 {% block content %}
 <h2>Detalles de la compra:</h2>
 <p>Cliente: {{cliente}}</p>
 <p>Fecha: {{compra.fecha}}</p>
-
- 
     <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
- 
         <table class="table">
             <thead class="atributes">
                 <tr>
                     <th scope="col">MUEBLE</th>
                     <th scope="col">PRECIO INDIVIDUAL</th>
                     <th scope="col">PRECIO TOTAL</th>
-                    
                 </tr>
             </thead>
             <tbody>
@@ -25,25 +21,16 @@
                                 {{ mueble.name }}
                             {% endfor %}
                         </td>
-                        
                         <td>
- 
- 
                             {% for mueble in compra.muebles.all %}
                                 {{mueble.cost}},
                             {% endfor %}
- 
-                           
                         </td>
-
                         <td>
                             {{compra.total}}
                         </td>
- 
- 
                     </tr>
             </tbody>
         </table>
     </form>
 {% endblock content %}
- 
