--- a/catalogo_muebles/mueblesemae/templates/display_cliente.html
+++ b/catalogo_muebles/mueblesemae/templates/display_cliente.html
@@ -5,9 +5,9 @@
     <ul>
         <li>Nombre: {{cliente.name}}</li>
         <li>Apellido: {{cliente.last_name}}</li>
-        <li>Cedula: {{cliente.dni}}</li>
+        <li>Cédula: {{cliente.dni}}</li>
         <li>Correo: {{cliente.email}}</li>
-        <li>Genero: {{cliente.get_gender_display}}</li>
+        <li>Género: {{cliente.get_gender_display}}</li>
     </ul>
 {% endblock content %}
     
