--- a/catalogo_muebles/mueblesemae/templates/cliente_list.html
+++ b/catalogo_muebles/mueblesemae/templates/cliente_list.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
-{% block title %}Pagina Inicial{% endblock title %}
+{% block title %}Cliente Tarjeta{% endblock title %}
 
 {% block content %}
     <h2>Clientes</h2>
     {% if user.is_authenticated %}
-    <a class="nav-link" href="{% url "mueblesemae:add_cliente" %}">Añadir cliente
-        <i class="fa-solid fa-circle-plus"></i>
-    </a>
+        <label>
+            <a class="nav-link" href="{% url "mueblesemae:add_cliente" %}">Añadir cliente
+                <i class="fa-solid fa-circle-plus"></i>
+            </a>
+        </label>
     {% endif %}
     <div class="row">
         {% for cliente  in clientes  %}
@@ -21,7 +23,7 @@
                 {% endif %}
                 <div class="card-body">
                     <h5 class="card-title">{{cliente | capfirst}}</h5>
-                    <p class="card-text">Cedula: {{cliente.dni}} </p>
+                    <p class="card-text">Cédula: {{cliente.dni}} </p>
                     <!--icono VER-->
                     <a href="/cliente/{{cliente.id}}" class="btn btn-primary">
                         <i class="fa-solid fa-eye"></i> <!--icono-->
@@ -32,16 +34,14 @@
                             <i class="fa-solid fa-pen-fancy"></i>
                         </a>
                         <!--icono BORRAR-->
-                            <a onclick = "confirmDelete(event)" type="button" id ="borrar" href="/delete_cliente/{{cliente.id}}" class="btn btn-danger">
-                                <i class="fa-solid fa-trash-can"></i>
-                            </a>
-
+                        <a onclick = "confirmDelete(event)" type="button" id ="borrar" href="/delete_cliente/{{cliente.id}}" class="btn btn-danger">
+                            <i class="fa-solid fa-trash-can"></i>
+                        </a>
                         {% endif %} 
                 </div>
             </div>
         </div>        
         {% endfor %}
     </div>
-    <br>
-    
+    <br> 
 {% endblock content %}
