--- a/catalogo_muebles/mueblesemae/templates/lista_compras.html
+++ b/catalogo_muebles/mueblesemae/templates/lista_compras.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}MUEBLESEMAE{% endblock title %}
+{% block title %}Lista de Compras{% endblock title %}
 
 {% block content %}
     <h2>Lista de compras</h2>
@@ -17,7 +17,6 @@
             </thead>
             <tbody>
                 {% for compra  in compras  %}
-
                     <tr>
                         <th scope="row">{{ forloop.counter }}</th>
                         <td>
@@ -26,41 +25,33 @@
                                 {% if not forloop.last %}, {% endif %}
                             {% endfor %}
                         </td>
-
                         <td>
                             {% for mueble in compra.muebles.all %}
                                 {{ mueble.name }}
                                 {% if not forloop.last %}, {% endif %}
                             {% endfor %}
                         </td>
-
                         <td>
                             {% for mueble in compra.muebles.all %}
                                 {{ mueble.get_type_display }}
                                 {% if not forloop.last %}, {% endif %}
                             {% endfor %}
                         </td>
-
                         <td>
                             {{ compra.cliente.name }}
                         </td>
-
                         <td>
                             <a class="nav-link" href="/detalle_compra/{{ compra.cliente.id }}/{{ compra.id }}/"><i class="fa-solid fa-eye"></i></a> 
                         </td>
-
                     </tr>
-                    
                 {% empty %}
                     <tr>
                         <td colspan="4">No hay compras registrados.</td>
                     </tr>
-
                 {% endfor %}
                 
             </tbody>
         </table>
     </div>
     <br>
-    
 {% endblock content %}
