--- a/catalogo_muebles/mueblesemae/templates/login_form.html
+++ b/catalogo_muebles/mueblesemae/templates/login_form.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title  %} Ingreso de Mueble {% endblock title  %}
+{% block title  %}Login{% endblock title  %}
 {% block content %}
     <form method="post">
         {% csrf_token %}
@@ -18,6 +18,5 @@
                 <a href="{% url "mueblesemae:index"  %}" class="btn btn-secondary">Regresar</a>
             </div>
         </div>
-
     </form>
 {% endblock content %}
